Submodule: Added auth SAML2

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "html/blocks/configurable_reports"]
 	path = html/blocks/configurable_reports
 	url = https://github.com/jleyva/moodle-block_configurablereports.git
+[submodule "html/auth/saml2"]
+	path = html/auth/saml2
+	url = https://github.com/catalyst/moodle-auth_saml2.git
